# networth-tracker-app

./: README.md  app.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
pages/dashboard/: dashboard.py  functions.py
pages/dashboard/components/: balance_by_group.py  balance_by_group_overtime.py  balance_by_institution.py  fire_networth.py  investments_to_assets.py  networth.py  retirement_margin.py  spreadsheet.py  target_networth.py
pages/dashboard/ddl/: categorized_balances_most_recent.sql
pages/dashboard/functions/: charts.py  helpers.py
pages/home/: home.py
pages/income_and_expenses/: income_and_expenses.py
pages/income_and_expenses/components/: spreadsheet.py
pages/income_and_expenses/ddl/: transaction_groups_by_month.sql
pages/management/: management.py
utilities/: auth.py  calculations.py  gsheets.py  helper.py  sidebar.py
