[project]
name = "networth-tracker-app"
version = "0.1.0"
description = "A Streamlit app for tracking net worth over time"
authors = [
    {name="Benjamin Hoyle", email="benjaminrhoyle@gmail.com>"}
]
readme = "README.md"
requires-python = ">=3.11.0, < 3.12.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0, < 3.12.0"
pandas = "^2.2.2"
plotly = "^5.24.1"
streamlit = "^1.45.1"
streamlit-extras = "^0.7.0"
st-gsheets-connection = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
